# hello-websocket

./: .dockerignore  .gitignore  AGENTS.md  PLAN.md  PROTOCOL.md  README.md  build.sh  pom.xml  prompt.md  run.sh  sh_dos2unix.sh  sync.sh
.github/: dependabot.yml
.github/workflows/: build-test.yml  build.yml  dependabot-auto-merge.yml  dependency-health.yml  dependency-review.yml  docker-build-push.yml  docker-dependency-validation.yml  maven-publish.yml  rust.yml
doc/: MQTT.md
docker/: Dockerfile.cpp  Dockerfile.csharp  Dockerfile.dart  Dockerfile.go  Dockerfile.java  Dockerfile.kotlin  Dockerfile.node  Dockerfile.php  Dockerfile.python  Dockerfile.rust  Dockerfile.swift  Dockerfile.ts  README.md  build_image.sh  container_runtime.sh  cpp_ws.dockerfile  csharp_ws.dockerfile  dart_ws.dockerfile  docker-compose.cpp.yml  docker-compose.csharp.yml  docker-compose.dart.yml  docker-compose.go.yml  docker-compose.java.yml  docker-compose.kotlin.yml  docker-compose.nodejs.yml  docker-compose.php.yml  docker-compose.python.yml  docker-compose.rust.yml  docker-compose.swift.yml  docker-compose.ts.yml  docker-compose.yml  go_ws.dockerfile  java_ws.dockerfile  kotlin_ws.dockerfile  node_ws.dockerfile  php_ws.dockerfile  push_image.sh  python_ws.dockerfile  run_container.sh  rust_ws.dockerfile  (+3 more)
docker/gradle-init.d/: aliyun.gradle
docs/: DEPENDENCY_AUTOMATION.md
echo/gorilla-ws/: README.md  go.mod  message.go
hello-websocket-cpp/: CMakeLists.txt  README.md
hello-websocket-cpp/client/: ws_client.cpp
hello-websocket-cpp/common/: codec.hpp  ws.hpp
hello-websocket-cpp/scripts/: build.ps1  build.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-websocket-cpp/server/: ws_server.cpp
hello-websocket-cpp/test/: test_codec.cpp
hello-websocket-csharp/: Program.cs  README.md  hello-websocket-csharp.csproj
hello-websocket-csharp/client/: WsClient.cs
hello-websocket-csharp/common/: Codec.cs
hello-websocket-csharp/scripts/: build.sh  run-client.sh  run-server.sh
hello-websocket-dart/: README.md  pubspec.yaml
hello-websocket-flutter-client/: README.md  pubspec.yaml
hello-websocket-go/: README.md  go.mod
hello-websocket-java/: README.md  client_build.sh  client_run.sh  pom.xml  server_build.sh  server_run.sh
hello-websocket-kotlin/: README.md  build.gradle.kts  settings.gradle.kts
hello-websocket-nodejs/: README.md  package-lock.json  package.json  websocketServer.js
hello-websocket-php/: .phpunit.result.cache  README.md  composer.json
hello-websocket-python/: README.md  client.py  common.py  format.sh  hello_client.py  hello_common.py  hello_protocol.py  hello_server.py  server.py
hello-websocket-rust/: Cargo.toml  README.md
hello-websocket-rust/client/: main.rs
hello-websocket-rust/common/: lib.rs
hello-websocket-rust/scripts/: build.sh  run-client.sh  run-server.sh
hello-websocket-rust/server/: main.rs
hello-websocket-rust/src/: hello_client.rs  hello_common.rs  hello_server.rs
hello-websocket-spring-boot/: README.md  build.sh  pom.xml  run.sh
hello-websocket-swift/: Package.swift  README.md
hello-websocket-ts/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: check-versions.sh  format.sh  validate-dependency-automation.rb
tests/: protocol-vectors.json  reference_client.py
(+229 files in other folders)
