[package]
name = "hello_websocket"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2018"


[dependencies]
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.28.0"
url = "2.4.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = "0.4.37"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"

[[bin]]
name = "hello-server"
path = "src/hello_server.rs"

[[bin]]
name = "hello-client"
path = "src/hello_client.rs"
