[package]
name = "hello_websocket"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_websocket"
path = "common/lib.rs"

[[bin]]
name = "ws-server"
path = "server/main.rs"

[[bin]]
name = "ws-client"
path = "client/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
rand = "0.8"

[dev-dependencies]
